--- a/Front-end/index.html
+++ b/Front-end/index.html
@@ -1,1 +1,52 @@
-
+<!DOCTYPE html>
+<html lang="pt-BR">
+<head>
+  <meta charset="UTF-8">
+  <title>Sistema de Frota</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <style>
+    body {
+      font-family: Arial, sans-serif;
+      background: #f4f6f9;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      justify-content: center;
+      height: 100vh;
+      margin: 0;
+    }
+    h1 {
+      color: #333;
+      margin-bottom: 20px;
+    }
+    .menu {
+      display: flex;
+      flex-direction: column;
+      gap: 12px;
+      width: 250px;
+    }
+    a {
+      text-decoration: none;
+      background: #007BFF;
+      color: white;
+      padding: 14px;
+      text-align: center;
+      border-radius: 8px;
+      font-size: 16px;
+      transition: background 0.3s;
+    }
+    a:hover {
+      background: #0056b3;
+    }
+  </style>
+</head>
+<body>
+  <h1>🚍 Sistema de Frota</h1>
+  <div class="menu">
+    <a href="onibus.html">Cadastro de Ônibus</a>
+    <a href="motorista.html">Cadastro de Motoristas</a>
+    <a href="linha.html">Cadastro de Linhas</a>
+    <a href="rota.html">Cadastro de Rotas</a>
+  </div>
+</body>
+</html>
