--- a/index.html
+++ b/index.html
@@ -5,7 +5,6 @@
   <title>Sistema de Frota</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <style>
-    /* Reset simples */
     * {
       margin: 0;
       padding: 0;
@@ -14,26 +13,40 @@
 
     body {
       font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
-      background: linear-gradient(135deg, #007BFF, #00C6FF);
-      display: flex;
-      align-items: center;
-      justify-content: center;
+      background: url("https://images.unsplash.com/photo-1529070538774-1843cb3265df?ixlib=rb-4.0.3&auto=format&fit=crop&w=1600&q=80") 
+                  no-repeat center center fixed;
+      background-size: cover;
       height: 100vh;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      position: relative;
+    }
+
+    /* overlay escuro para dar contraste ao fundo */
+    .overlay {
+      position: absolute;
+      top: 0; left: 0;
+      width: 100%; height: 100%;
+      background-color: rgba(0, 0, 0, 0.4);
     }
 
     .container {
-      background: #fff;
+      position: relative;
+      z-index: 2;
       padding: 30px 40px;
+      background: rgba(255, 255, 255, 0.9);
       border-radius: 16px;
-      box-shadow: 0 8px 20px rgba(0, 0, 0, 0.15);
       text-align: center;
-      width: 320px;
+      max-width: 350px;
+      width: 90%;
+      box-shadow: 0 8px 20px rgba(0,0,0,0.2);
     }
 
     h1 {
       color: #222;
       margin-bottom: 25px;
-      font-size: 24px;
+      font-size: 26px;
     }
 
     .menu {
@@ -42,8 +55,7 @@
       gap: 15px;
     }
 
-    a {
-      display: block;
+    .menu a {
       text-decoration: none;
       background: #007BFF;
       color: white;
@@ -51,26 +63,17 @@
       border-radius: 10px;
       font-size: 16px;
       font-weight: bold;
-      transition: transform 0.2s, background 0.3s;
+      transition: background 0.3s, transform 0.2s;
     }
 
-    a:hover {
+    .menu a:hover {
       background: #0056b3;
       transform: translateY(-3px);
-    }
-
-    /* Animação de entrada */
-    .container {
-      animation: fadeIn 1s ease-in-out;
-    }
-
-    @keyframes fadeIn {
-      from { opacity: 0; transform: translateY(20px); }
-      to { opacity: 1; transform: translateY(0); }
     }
   </style>
 </head>
 <body>
+  <div class="overlay"></div>
   <div class="container">
     <h1>🚍 Sistema de Frota</h1>
     <div class="menu">
