--- a/index.html
+++ b/index.html
@@ -13,8 +13,7 @@
 
     body {
       font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
-      background: url("https://upload.wikimedia.org/wikipedia/commons/3/3d/Bus_Terminal_in_Salvador.jpg") 
-                  no-repeat center center fixed;
+      background: url("https://www.camposdejulio.mt.gov.br/uploads/arquivos/2023/10/terminal-rodoviario-darci-bandurski.jpg") no-repeat center center fixed;
       background-size: cover;
       height: 100vh;
       display: flex;
@@ -23,20 +22,18 @@
       position: relative;
     }
 
-    /* overlay branca quase transparente */
     .overlay {
       position: absolute;
       top: 0; left: 0;
-      width: 100%;
-      height: 100%;
-      background-color: rgba(255, 255, 255, 0.8); /* quanto maior o alfa (0 a 1), mais clara */
+      width: 100%; height: 100%;
+      background-color: rgba(255, 255, 255, 0.7); /* Overlay branca com 70% de opacidade */
     }
 
     .container {
       position: relative;
       z-index: 2;
       padding: 30px 40px;
-      background: rgba(255, 255, 255, 0.95); /* leve destaque sobre overlay */
+      background: rgba(255, 255, 255, 0.9); /* Fundo branco com leve transparência */
       border-radius: 16px;
       text-align: center;
       max-width: 350px;
