--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
     body {
       font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
-      background: url("https://www.camposdejulio.mt.gov.br/uploads/arquivos/2023/10/terminal-rodoviario-darci-bandurski.jpg") no-repeat center center fixed;
+      background: url("https://upload.wikimedia.org/wikipedia/commons/3/3d/Bus_Terminal_in_Salvador.jpg") no-repeat center center fixed;
       background-size: cover;
       height: 100vh;
       display: flex;
