--- a/index.html
+++ b/index.html
@@ -13,32 +13,28 @@
 
     body {
       font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
-      background: url("https://upload.wikimedia.org/wikipedia/commons/3/3d/Bus_Terminal_in_Salvador.jpg") no-repeat center center fixed;
-      background-size: cover;
       height: 100vh;
       display: flex;
       justify-content: center;
       align-items: center;
       position: relative;
-    }
-
-    .overlay {
-      position: absolute;
-      top: 0; left: 0;
-      width: 100%; height: 100%;
-      background-color: rgba(255, 255, 255, 0.7); /* Overlay branca com 70% de opacidade */
+      /* imagem de fundo */
+      background: url("https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQFu1P1yMRXqIKycHAi-mBL0MXDmXh1XZiCMw&s") no-repeat center center fixed;
+      background-size: cover;
+      /* filtro para clarear a imagem sem overlay branco */
+      filter: brightness(0.7);
     }
 
     .container {
-      position: relative;
       z-index: 2;
       padding: 30px 40px;
-      background: rgba(255, 255, 255, 0.9); /* Fundo branco com leve transparência */
+      background: rgba(255, 255, 255, 0.9); /* mantém o conteúdo legível */
       border-radius: 16px;
       text-align: center;
       max-width: 350px;
       width: 90%;
       box-shadow: 0 8px 20px rgba(0,0,0,0.2);
+      position: relative;
     }
 
     h1 {
@@ -71,7 +67,6 @@
   </style>
 </head>
 <body>
-  <div class="overlay"></div>
   <div class="container">
     <h1>🚍 Sistema de Frota</h1>
     <div class="menu">
