--- a/index.html
+++ b/index.html
@@ -11,49 +11,50 @@
       box-sizing: border-box;
     }
 
-    body {
+    html, body {
+      height: 100%;
       font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
-      height: 100vh;
+    }
+
+    body {
       display: flex;
       justify-content: center;
       align-items: center;
       position: relative;
-      /* imagem de fundo */
-      background: url("https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQFu1P1yMRXqIKycHAi-mBL0MXDmXh1XZiCMw&s") no-repeat center center fixed;
-      background-size: cover;
-      /* filtro para clarear a imagem sem overlay branco */
-      filter: brightness(0.7);
+      background: url("https://images.unsplash.com/photo-1549924231-f129b911e442?ixlib=rb-4.0.3&auto=format&fit=crop&w=1920&q=80") no-repeat center center fixed;
+      background-size: cover; /* mantém proporção da imagem */
+      filter: brightness(0.7); /* clareia a imagem */
     }
 
     .container {
       z-index: 2;
-      padding: 30px 40px;
-      background: rgba(255, 255, 255, 0.9); /* mantém o conteúdo legível */
+      padding: 30px 20px;
+      background: rgba(255, 255, 255, 0.9);
       border-radius: 16px;
       text-align: center;
-      max-width: 350px;
-      width: 90%;
+      max-width: 90%;  /* ocupa até 90% da tela */
+      width: 350px;
       box-shadow: 0 8px 20px rgba(0,0,0,0.2);
       position: relative;
     }
 
     h1 {
       color: #222;
-      margin-bottom: 25px;
-      font-size: 26px;
+      margin-bottom: 20px;
+      font-size: 24px;
     }
 
     .menu {
       display: flex;
       flex-direction: column;
-      gap: 15px;
+      gap: 12px;
     }
 
     .menu a {
       text-decoration: none;
       background: #007BFF;
       color: white;
-      padding: 14px;
+      padding: 12px;
       border-radius: 10px;
       font-size: 16px;
       font-weight: bold;
@@ -62,7 +63,19 @@
 
     .menu a:hover {
       background: #0056b3;
-      transform: translateY(-3px);
+      transform: translateY(-2px);
+    }
+
+    /* Ajustes para telas pequenas */
+    @media (max-width: 480px) {
+      h1 {
+        font-size: 20px;
+      }
+
+      .menu a {
+        font-size: 14px;
+        padding: 10px;
+      }
     }
   </style>
 </head>
