--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
       justify-content: center;
       align-items: center;
       position: relative;
-      background: url("https://images.unsplash.com/photo-1549924231-f129b911e442?ixlib=rb-4.0.3&auto=format&fit=crop&w=1920&q=80") no-repeat center center fixed;
+      background: url("https://upload.wikimedia.org/wikipedia/commons/thumb/0/0e/Terminal_de_onibus_Pca.das_Bandeiras_01.jpg/800px-Terminal_de_onibus_Pca.das_Bandeiras_01.jpg") no-repeat center center fixed;
       background-size: cover; /* mantém proporção da imagem */
       filter: brightness(0.7); /* clareia a imagem */
     }
