--- a/index.html
+++ b/index.html
@@ -21,9 +21,9 @@
       justify-content: center;
       align-items: center;
       position: relative;
-      background: url("https://upload.wikimedia.org/wikipedia/commons/thumb/0/0e/Terminal_de_onibus_Pca.das_Bandeiras_01.jpg/800px-Terminal_de_onibus_Pca.das_Bandeiras_01.jpg") no-repeat center center fixed;
-      background-size: cover; /* mantém proporção da imagem */
-      filter: brightness(0.7); /* clareia a imagem */
+      background: url("https://upload.wikimedia.org/wikipedia/commons/0/0e/Terminal_de_onibus_Pca.das_Bandeiras_01.jpg") no-repeat center center fixed;
+      background-size: cover;
+      filter: brightness(0.75); /* clareia a imagem sem sumir */
     }
 
     .container {
@@ -32,7 +32,7 @@
       background: rgba(255, 255, 255, 0.9);
       border-radius: 16px;
       text-align: center;
-      max-width: 90%;  /* ocupa até 90% da tela */
+      max-width: 90%;
       width: 350px;
       box-shadow: 0 8px 20px rgba(0,0,0,0.2);
       position: relative;
@@ -66,7 +66,6 @@
       transform: translateY(-2px);
     }
 
-    /* Ajustes para telas pequenas */
     @media (max-width: 480px) {
       h1 {
         font-size: 20px;
