--- a/motorista.html
+++ b/motorista.html
@@ -1,100 +1,120 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
 <head>
-  <meta charset="utf-8" />
-  <title>Cadastro de Motorista</title>
-  <meta name="viewport" content="width=device-width,initial-scale=1">
+  <meta charset="UTF-8">
+  <title>Cadastro de Motoristas</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1">
   <style>
-    body{font-family:Arial,Helvetica,sans-serif;background:#f4f6f9;margin:0;padding:20px}
-    .card{max-width:760px;margin:0 auto;background:#fff;border-radius:10px;padding:18px;box-shadow:0 2px 8px rgba(0,0,0,.08)}
-    h1{margin:0 0 12px}
-    label{display:block;margin-top:10px;font-weight:600}
-    input{width:100%;padding:8px;margin-top:6px;border-radius:6px;border:1px solid #ccc}
-    button{margin-top:12px;padding:10px 14px;border-radius:8px;border:none;background:#007BFF;color:#fff;cursor:pointer}
-    table{width:100%;border-collapse:collapse;margin-top:16px}
-    th,td{padding:8px;border-bottom:1px solid #eee;text-align:left}
-    a.back{display:inline-block;margin-bottom:10px;color:#007BFF;text-decoration:none}
+    * {
+      margin: 0;
+      padding: 0;
+      box-sizing: border-box;
+    }
+
+    html, body {
+      height: 100%;
+      font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
+    }
+
+    body {
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      position: relative;
+      background: url("https://images.unsplash.com/photo-1581092795367-5fa2f5d7e3cd?ixlib=rb-4.0.3&auto=format&fit=crop&w=1920&q=80") no-repeat center center fixed;
+      background-size: cover;
+      filter: brightness(0.75); /* clareia a imagem */
+    }
+
+    .container {
+      z-index: 2;
+      padding: 30px 20px;
+      background: rgba(255, 255, 255, 0.9);
+      border-radius: 16px;
+      text-align: center;
+      max-width: 90%;
+      width: 400px;
+      box-shadow: 0 8px 20px rgba(0,0,0,0.2);
+      position: relative;
+    }
+
+    h1 {
+      color: #222;
+      margin-bottom: 20px;
+      font-size: 24px;
+    }
+
+    form {
+      display: flex;
+      flex-direction: column;
+      gap: 15px;
+      text-align: left;
+    }
+
+    label {
+      font-weight: bold;
+      margin-bottom: 5px;
+      display: block;
+    }
+
+    input {
+      padding: 10px;
+      border-radius: 8px;
+      border: 1px solid #ccc;
+      width: 100%;
+      font-size: 14px;
+    }
+
+    button {
+      padding: 12px;
+      border-radius: 10px;
+      border: none;
+      background-color: #007BFF;
+      color: white;
+      font-size: 16px;
+      font-weight: bold;
+      cursor: pointer;
+      transition: background 0.3s, transform 0.2s;
+    }
+
+    button:hover {
+      background-color: #0056b3;
+      transform: translateY(-2px);
+    }
+
+    @media (max-width: 480px) {
+      h1 {
+        font-size: 20px;
+      }
+
+      input, button {
+        font-size: 14px;
+        padding: 10px;
+      }
+    }
   </style>
 </head>
 <body>
-  <div class="card">
-    <a class="back" href="index.html">← Voltar</a>
-    <h1>Cadastro de Motorista</h1>
+  <div class="container">
+    <h1>🧑‍✈️ Cadastro de Motoristas</h1>
+    <form>
+      <label for="nome">Nome completo</label>
+      <input type="text" id="nome" name="nome" placeholder="Digite o nome">
 
-    <form id="formMotorista">
-      <label>Nome</label>
-      <input id="nome" required placeholder="Nome completo">
+      <label for="cpf">CPF</label>
+      <input type="text" id="cpf" name="cpf" placeholder="Digite o CPF">
 
-      <label>CPF</label>
-      <input id="cpf" placeholder="000.000.000-00">
+      <label for="telefone">Telefone</label>
+      <input type="text" id="telefone" name="telefone" placeholder="Digite o telefone">
 
-      <label>CNH</label>
-      <input id="cnh" placeholder="Número da CNH">
+      <label for="email">Email</label>
+      <input type="email" id="email" name="email" placeholder="Digite o email">
 
-      <label>Telefone</label>
-      <input id="telefone" placeholder="(XX) 9XXXX-XXXX">
+      <label for="cnh">CNH (número e categoria)</label>
+      <input type="text" id="cnh" name="cnh" placeholder="Digite CNH">
 
-      <button type="submit">Salvar Motorista</button>
+      <button type="submit">Cadastrar</button>
     </form>
-
-    <div id="lista"></div>
   </div>
-
-  <script>
-    const KEY = 'motoristas_list';
-
-    function carregar() {
-      const arr = JSON.parse(localStorage.getItem(KEY) || '[]');
-      renderizar(arr);
-    }
-
-    function renderizar(arr) {
-      const lista = document.getElementById('lista');
-      if (!arr.length) { lista.innerHTML = '<p class="small">Nenhum motorista cadastrado.</p>'; return; }
-      let html = '<table><thead><tr><th>#</th><th>Nome</th><th>CPF</th><th>CNH</th><th>Telefone</th><th>Ações</th></tr></thead><tbody>';
-      arr.forEach((m,i) => {
-        html += `<tr>
-          <td>${i+1}</td>
-          <td>${escapeHtml(m.nome)}</td>
-          <td>${escapeHtml(m.cpf||'')}</td>
-          <td>${escapeHtml(m.cnh||'')}</td>
-          <td>${escapeHtml(m.telefone||'')}</td>
-          <td><button onclick="excluir(${i})" style="padding:6px;border-radius:6px;background:#e63946;color:#fff;border:none;cursor:pointer">Excluir</button></td>
-        </tr>`;
-      });
-      html += '</tbody></table>';
-      lista.innerHTML = html;
-    }
-
-    document.getElementById('formMotorista').addEventListener('submit', function(e){
-      e.preventDefault();
-      const nome = document.getElementById('nome').value.trim();
-      const cpf = document.getElementById('cpf').value.trim();
-      const cnh = document.getElementById('cnh').value.trim();
-      const telefone = document.getElementById('telefone').value.trim();
-      if (!nome) { alert('Preencha o nome.'); return; }
-      const arr = JSON.parse(localStorage.getItem(KEY) || '[]');
-      arr.push({nome, cpf, cnh, telefone});
-      localStorage.setItem(KEY, JSON.stringify(arr));
-      this.reset();
-      carregar();
-    });
-
-    function excluir(index) {
-      if (!confirm('Excluir este motorista?')) return;
-      const arr = JSON.parse(localStorage.getItem(KEY) || '[]');
-      arr.splice(index,1);
-      localStorage.setItem(KEY, JSON.stringify(arr));
-      carregar();
-    }
-
-    function escapeHtml(s) {
-      if (!s) return '';
-      return s.replace(/[&<>"']/g, m => ({'&':'&amp;','<':'&lt;','>':'&gt;','"':'&quot;',"'":"&#39;"}[m]));
-    }
-
-    window.excluir = excluir;
-    carregar();
-  </script>
 </body>
 </html>
