--- a/motorista.html
+++ b/motorista.html
@@ -23,18 +23,18 @@
       position: relative;
       background: url("https://images.unsplash.com/photo-1581092795367-5fa2f5d7e3cd?ixlib=rb-4.0.3&auto=format&fit=crop&w=1920&q=80") no-repeat center center fixed;
       background-size: cover;
-      filter: brightness(0.75); /* clareia a imagem */
+      filter: brightness(0.75); /* clareia a imagem de fundo */
     }
 
     .container {
       z-index: 2;
       padding: 30px 20px;
-      background: rgba(255, 255, 255, 0.9);
+      background: rgba(255, 255, 255, 0.4); /* mais transparente */
       border-radius: 16px;
       text-align: center;
       max-width: 90%;
       width: 400px;
-      box-shadow: 0 8px 20px rgba(0,0,0,0.2);
+      box-shadow: 0 8px 20px rgba(0,0,0,0.3);
       position: relative;
     }
 
@@ -55,6 +55,7 @@
       font-weight: bold;
       margin-bottom: 5px;
       display: block;
+      color: #222;
     }
 
     input {
