--- a/motorista.html
+++ b/motorista.html
@@ -21,15 +21,15 @@
       justify-content: center;
       align-items: center;
       position: relative;
-      background: url("https://images.unsplash.com/photo-1581092795367-5fa2f5d7e3cd?ixlib=rb-4.0.3&auto=format&fit=crop&w=1920&q=80") no-repeat center center fixed;
-      background-size: cover;
-      filter: brightness(0.75); /* clareia a imagem de fundo */
+      background: url("motorista-002.png") no-repeat center center fixed;
+      background-size: cover; /* mantém proporção da imagem */
+      filter: brightness(0.75); /* clareia a imagem */
     }
 
     .container {
       z-index: 2;
       padding: 30px 20px;
-      background: rgba(255, 255, 255, 0.4); /* mais transparente */
+      background: rgba(255, 255, 255, 0.4); /* fundo transparente para ver a imagem */
       border-radius: 16px;
       text-align: center;
       max-width: 90%;
