--- a/motorista.html
+++ b/motorista.html
@@ -22,14 +22,14 @@
       align-items: center;
       position: relative;
       background: url("motorista-002.png") no-repeat center center fixed;
-      background-size: cover; /* mantém proporção da imagem */
-      filter: brightness(0.75); /* clareia a imagem */
+      background-size: cover; /* imagem cobre toda a tela */
+      filter: brightness(0.85); /* imagem mais clara */
     }
 
     .container {
       z-index: 2;
       padding: 30px 20px;
-      background: rgba(255, 255, 255, 0.4); /* fundo transparente para ver a imagem */
+      background: rgba(255, 255, 255, 0.85); /* formulário mais claro */
       border-radius: 16px;
       text-align: center;
       max-width: 90%;
