--- a/motorista.html
+++ b/motorista.html
@@ -21,7 +21,7 @@
       justify-content: center;
       align-items: center;
       position: relative;
-      background: url("motorista-002.png") no-repeat center center fixed;
+      background: url("fg302100.jpg") no-repeat center center fixed;
       background-size: contain; /* imagem inteira visível */
       filter: brightness(0.85); /* imagem mais clara */
     }
