--- a/motorista.html
+++ b/motorista.html
@@ -22,14 +22,14 @@
       align-items: center;
       position: relative;
       background: url("fg302100.jpg") no-repeat center center fixed;
-      background-size: contain; /* imagem inteira visível */
-      filter: brightness(0.85); /* imagem mais clara */
+      background-size: cover; /* cobre toda a tela */
+      filter: brightness(0.75); /* imagem mais clara */
     }
 
     .container {
       z-index: 2;
       padding: 30px 20px;
-      background: rgba(255, 255, 255, 0.85); /* formulário mais opaco */
+      background: rgba(255, 255, 255, 0.85); /* formulário mais legível */
       border-radius: 16px;
       text-align: center;
       max-width: 90%;
