--- a/motorista.html
+++ b/motorista.html
@@ -20,8 +20,8 @@
       display: flex;
       justify-content: center;
       align-items: center;
-      position: relative;
-      background: url("fg302100.jpg") no-repeat center center fixed;
+      min-height: 100vh; /* garante altura mínima da tela */
+      background: url("./fg302100.jpg") no-repeat center center fixed;
       background-size: cover; /* cobre toda a tela */
       filter: brightness(0.75); /* imagem mais clara */
     }
@@ -29,7 +29,7 @@
     .container {
       z-index: 2;
       padding: 30px 20px;
-      background: rgba(255, 255, 255, 0.85); /* formulário mais legível */
+      background: rgba(255, 255, 255, 0.85); /* formulário legível */
       border-radius: 16px;
       text-align: center;
       max-width: 90%;
