--- a/motorista.html
+++ b/motorista.html
@@ -13,32 +13,40 @@
 
     html, body {
       height: 100%;
+      width: 100%;
       font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
     }
 
     body {
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      min-height: 100vh; /* garante altura mínima da tela */
-      background: url("./fg302100.jpg") no-repeat center center fixed;
+      background: url("fg302100.jpg") no-repeat center center fixed;
       background-size: cover; /* cobre toda a tela */
-      filter: brightness(0.75); /* imagem mais clara */
-    }
-
-    .container {
-      z-index: 2;
-      padding: 30px 20px;
-      background: rgba(255, 255, 255, 0.85); /* formulário legível */
-      border-radius: 16px;
-      text-align: center;
-      max-width: 90%;
-      width: 400px;
-      box-shadow: 0 8px 20px rgba(0,0,0,0.3);
+      filter: brightness(0.7); /* deixa mais clara a imagem */
       position: relative;
     }
 
+    .overlay {
+      position: absolute;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+      background-color: rgba(255, 255, 255, 0.3); /* leve camada para clarear a imagem */
+      z-index: 1;
+    }
+
+    .container {
+      position: relative;
+      z-index: 2;
+      max-width: 400px;
+      margin: 50px auto; /* centraliza horizontalmente */
+      padding: 30px 20px;
+      background: rgba(255, 255, 255, 0.85);
+      border-radius: 16px;
+      box-shadow: 0 8px 20px rgba(0,0,0,0.3);
+    }
+
     h1 {
+      text-align: center;
       color: #222;
       margin-bottom: 20px;
       font-size: 24px;
@@ -48,13 +56,10 @@
       display: flex;
       flex-direction: column;
       gap: 15px;
-      text-align: left;
     }
 
     label {
       font-weight: bold;
-      margin-bottom: 5px;
-      display: block;
       color: #222;
     }
 
@@ -62,8 +67,8 @@
       padding: 10px;
       border-radius: 8px;
       border: 1px solid #ccc;
-      width: 100%;
       font-size: 14px;
+      width: 100%;
     }
 
     button {
@@ -72,8 +77,8 @@
       border: none;
       background-color: #007BFF;
       color: white;
-      font-size: 16px;
       font-weight: bold;
+      font-size: 16px;
       cursor: pointer;
       transition: background 0.3s, transform 0.2s;
     }
@@ -84,18 +89,21 @@
     }
 
     @media (max-width: 480px) {
+      .container {
+        margin: 30px 10px;
+        width: auto;
+      }
       h1 {
         font-size: 20px;
       }
-
       input, button {
         font-size: 14px;
-        padding: 10px;
       }
     }
   </style>
 </head>
 <body>
+  <div class="overlay"></div>
   <div class="container">
     <h1>🧑‍✈️ Cadastro de Motoristas</h1>
     <form>
