--- a/motorista.html
+++ b/motorista.html
@@ -18,9 +18,9 @@
     }
 
     body {
-      background: url("fg302100.jpg") no-repeat center center fixed;
+      background: url("WhatsApp-Image-2025-07-25-at-09.33.43-scaled.jpeg") no-repeat center center fixed;
       background-size: cover; /* cobre toda a tela */
-      filter: brightness(0.7); /* deixa mais clara a imagem */
+      filter: brightness(0.7); /* imagem mais clara */
       position: relative;
     }
 
@@ -30,7 +30,7 @@
       left: 0;
       width: 100%;
       height: 100%;
-      background-color: rgba(255, 255, 255, 0.3); /* leve camada para clarear a imagem */
+      background-color: rgba(255, 255, 255, 0.3); /* camada clara para contraste */
       z-index: 1;
     }
 
