--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8">
   <title>Sistema de Frota</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
+
   <style>
     * {
       margin: 0;
@@ -11,50 +12,54 @@
       box-sizing: border-box;
     }
 
-    html, body {
-      height: 100%;
-      font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
-    }
-
     body {
+      font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
+      background: url("Terminal_de_onibus_Pca.das_Bandeiras_01.jpg") no-repeat center center fixed;
+      background-size: cover;
+      min-height: 100vh;
       display: flex;
       justify-content: center;
       align-items: center;
       position: relative;
-      background: url("Terminal_de_onibus_Pca.das_Bandeiras_01.jpg") no-repeat center center fixed;
-      background-size: cover; /* mantém proporção da imagem */
-      filter: brightness(0.75); /* clareia a imagem */
+    }
+
+    /* Overlay para deixar a imagem mais clara */
+    .overlay {
+      position: absolute;
+      top: 0; left: 0;
+      width: 100%; height: 100%;
+      background-color: rgba(255, 255, 255, 0.6);
     }
 
     .container {
+      position: relative;
       z-index: 2;
-      padding: 30px 20px;
-      background: rgba(255, 255, 255, 0.9);
+      padding: 30px 40px;
+      background: rgba(255, 255, 255, 0.95);
       border-radius: 16px;
       text-align: center;
-      max-width: 90%;
-      width: 350px;
+      max-width: 350px;
+      width: 90%;
       box-shadow: 0 8px 20px rgba(0,0,0,0.2);
-      position: relative;
     }
 
     h1 {
       color: #222;
-      margin-bottom: 20px;
-      font-size: 24px;
+      margin-bottom: 25px;
+      font-size: 26px;
     }
 
     .menu {
       display: flex;
       flex-direction: column;
-      gap: 12px;
+      gap: 15px;
     }
 
     .menu a {
       text-decoration: none;
       background: #007BFF;
       color: white;
-      padding: 12px;
+      padding: 14px;
       border-radius: 10px;
       font-size: 16px;
       font-weight: bold;
@@ -63,30 +68,20 @@
 
     .menu a:hover {
       background: #0056b3;
-      transform: translateY(-2px);
-    }
-
-    /* Ajustes para telas pequenas */
-    @media (max-width: 480px) {
-      h1 {
-        font-size: 20px;
-      }
-
-      .menu a {
-        font-size: 14px;
-        padding: 10px;
-      }
+      transform: translateY(-3px);
     }
   </style>
 </head>
 <body>
+  <div class="overlay"></div>
+
   <div class="container">
     <h1>🚍 Sistema de Frota</h1>
     <div class="menu">
-      <a href="onibus.html">Cadastro de Ônibus</a>
-      <a href="motorista.html">Cadastro de Motoristas</a>
-      <a href="linha.html">Cadastro de Linhas</a>
-      <a href="rota.html">Cadastro de Rotas</a>
+      <a href="onibus.html">🚍 Cadastro de Ônibus</a>
+      <a href="motorista.html">👨‍✈️ Cadastro de Motoristas</a>
+      <a href="linha.html">📍 Cadastro de Linhas</a>
+      <a href="rota.html">➡️ Cadastro de Rotas</a>
     </div>
   </div>
 </body>
