--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="pt-BR">
 <head>
   <meta charset="UTF-8">
-  <title>Sistema de Frota</title>
+  <title>Sistema de Rastreabilidade de Frota</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
   <style>
@@ -23,7 +23,6 @@
       position: relative;
     }
 
-    /* overlay para suavizar a imagem */
     .overlay {
       position: absolute;
       top: 0; left: 0;
@@ -44,27 +43,27 @@
 
       display: flex;
       flex-direction: column;
-      align-items: center; /* centraliza dentro do container */
+      align-items: center;
       gap: 20px;
     }
 
     h1 {
       color: #222;
-      font-size: 26px;
+      font-size: 24px;
     }
 
     .menu {
       display: flex;
       flex-direction: column;
       gap: 12px;
-      width: 100%; /* garante largura igual dos botões */
-      align-items: center; /* centraliza */
+      width: 100%;
+      align-items: center;
     }
 
     .menu a {
       display: block;
-      width: 100%; /* todos botões do mesmo tamanho */
-      max-width: 250px; /* tamanho fixo elegante */
+      width: 100%;
+      max-width: 250px;
       text-decoration: none;
       background: #007BFF;
       color: white;
@@ -86,7 +85,7 @@
   <div class="overlay"></div>
 
   <div class="container">
-    <h1>🚍 Sistema de Frota</h1>
+    <h1>🚍 Sistema de Rastreabilidade de Frota</h1>
     <div class="menu">
       <a href="onibus.html">🚍 Cadastro de Ônibus</a>
       <a href="motorista.html">👨‍✈️ Cadastro de Motoristas</a>
