--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="pt-BR">
 <head>
   <meta charset="UTF-8">
-  <title>Sistema de Rastreabilidade de Frota</title>
+  <title>Sistema de Frota</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
   <style>
@@ -85,12 +85,13 @@
   <div class="overlay"></div>
 
   <div class="container">
-    <h1>🚍 Sistema de Rastreabilidade de Frota</h1>
+    <h1>🚍 Sistema de Frota</h1>
     <div class="menu">
       <a href="onibus.html">🚍 Cadastro de Ônibus</a>
       <a href="motorista.html">👨‍✈️ Cadastro de Motoristas</a>
       <a href="linha.html">📍 Cadastro de Linhas</a>
       <a href="rota.html">➡️ Cadastro de Rotas</a>
+      <a href="rastreabilidade.html">📡 Rastreabilidade de Frota</a>
     </div>
   </div>
 </body>
