--- a/index.html
+++ b/index.html
@@ -2,15 +2,11 @@
 <html lang="pt-BR">
 <head>
   <meta charset="UTF-8">
-  <title>Sistema de Frota</title>
+  <title>Sistema de Rastreabilidade de Frota</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
   <style>
-    * {
-      margin: 0;
-      padding: 0;
-      box-sizing: border-box;
-    }
+    * { margin:0; padding:0; box-sizing:border-box; }
 
     body {
       font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
@@ -23,33 +19,30 @@
       position: relative;
     }
 
-    .overlay {
-      position: absolute;
-      top: 0; left: 0;
-      width: 100%; height: 100%;
-      background-color: rgba(255, 255, 255, 0.6);
+    .overlay { 
+      position: absolute; top:0; left:0; width:100%; height:100%; 
+      background-color: rgba(255,255,255,0.6); 
+      z-index:1;
     }
 
     .container {
-      position: relative;
-      z-index: 2;
+      position: relative; z-index:2;
       padding: 30px 40px;
-      background: rgba(255, 255, 255, 0.95);
+      background: rgba(255,255,255,0.95);
       border-radius: 16px;
       text-align: center;
       max-width: 350px;
       width: 90%;
       box-shadow: 0 8px 20px rgba(0,0,0,0.2);
-
       display: flex;
       flex-direction: column;
       align-items: center;
       gap: 20px;
     }
 
-    h1 {
-      color: #222;
-      font-size: 24px;
+    h1 { 
+      color: #222; 
+      font-size: 24px; 
     }
 
     .menu {
@@ -85,7 +78,7 @@
   <div class="overlay"></div>
 
   <div class="container">
-    <h1>🚍 Sistema de Frota</h1>
+    <h1>🚍 Sistema de Rastreabilidade de Frota</h1>
     <div class="menu">
       <a href="onibus.html">🚍 Cadastro de Ônibus</a>
       <a href="motorista.html">👨‍✈️ Cadastro de Motoristas</a>
