--- a/Rastreabilidade.html
+++ b/Rastreabilidade.html
@@ -1,124 +1,23 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
 <head>
-  <meta charset="UTF-8">
-  <title>Rastreabilidade de Frota</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-
-  <!-- Leaflet CSS -->
-  <link rel="stylesheet" href="https://unpkg.com/leaflet/dist/leaflet.css" />
-
-  <style>
-    * { margin:0; padding:0; box-sizing:border-box; }
-    html, body { height:100%; font-family:"Segoe UI", Tahoma, Geneva, Verdana, sans-serif; }
-
-    body {
-      background: url("Terminal_de_onibus_Pca.das_Bandeiras_01.jpg") no-repeat center center fixed;
-      background-size: cover;
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      position: relative;
-    }
-
-    .overlay {
-      position: absolute; top:0; left:0; width:100%; height:100%;
-      background-color: rgba(255,255,255,0.5);
-      z-index:1;
-    }
-
-    .container {
-      position: relative; z-index:2;
-      width:95%; max-width:1000px;
-      background: rgba(255,255,255,0.95);
-      border-radius:16px; padding:20px;
-      box-shadow:0 8px 20px rgba(0,0,0,0.2);
-      display:flex; flex-direction:column; gap:15px;
-    }
-
-    h1 { text-align:center; color:#222; font-size:24px; }
-
-    form {
-      display:flex; flex-wrap:wrap; gap:10px; justify-content:center;
-    }
-
-    input, button {
-      padding:10px; font-size:16px; border-radius:8px; border:1px solid #ccc;
-    }
-
-    button {
-      background:#007BFF; color:white; border:none; cursor:pointer; transition: background 0.3s;
-    }
-
-    button:hover { background:#0056b3; }
-
-    #map { height:400px; border-radius:12px; }
-
-    a.voltar {
-      text-decoration:none; background:#6c757d; color:white; padding:10px 16px; border-radius:8px;
-      text-align:center; display:inline-block; transition: background 0.3s; width:fit-content; margin:auto;
-    }
-    a.voltar:hover { background:#5a6268; }
-  </style>
+<meta charset="UTF-8">
+<title>Rastreabilidade de Frota</title>
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<style>
+body {
+  font-family: Arial, sans-serif;
+  background: url("Terminal_de_onibus_Pca.das_Bandeiras_01.jpg") no-repeat center center fixed;
+  background-size: cover;
+  height: 100vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+h1 { color: #222; background: rgba(255,255,255,0.8); padding: 20px; border-radius: 12px; }
+</style>
 </head>
 <body>
-  <div class="overlay"></div>
-
-  <div class="container">
-    <h1>📡 Rastreabilidade de Frota</h1>
-
-    <form id="searchForm">
-      <input type="text" id="searchInput" placeholder="Digite a placa do veículo">
-      <button type="submit">Buscar</button>
-    </form>
-
-    <div id="map"></div>
-
-    <a href="index.html" class="voltar">⬅ Voltar ao Início</a>
-  </div>
-
-  <!-- Leaflet JS -->
-  <script src="https://unpkg.com/leaflet/dist/leaflet.js"></script>
-  <script>
-    // Inicializa o mapa centrado em São Paulo
-    var map = L.map('map').setView([-23.55052, -46.633308], 12);
-
-    // Adiciona mapa base do OpenStreetMap
-    L.tileLayer('https://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png', {
-      attribution: '© OpenStreetMap contributors'
-    }).addTo(map);
-
-    // Dados dos veículos
-    var veiculos = [
-      { placa: 'ABC-1234', motorista: 'João Silva', status: 'Em operação', lat: -23.547, lng: -46.635 },
-      { placa: 'XYZ-9876', motorista: 'Maria Santos', status: 'Em trânsito', lat: -23.560, lng: -46.620 },
-      { placa: 'DEF-5678', motorista: 'Carlos Pereira', status: 'Parado', lat: -23.555, lng: -46.640 }
-    ];
-
-    // Adiciona marcadores
-    var markers = [];
-    veiculos.forEach(function(v){
-      var marker = L.marker([v.lat,v.lng]).addTo(map)
-        .bindPopup('<b>Placa:</b> ' + v.placa + '<br><b>Motorista:</b> ' + v.motorista + '<br><b>Status:</b> ' + v.status);
-      markers.push({placa: v.placa.toLowerCase(), marker: marker});
-    });
-
-    // Função de busca
-    document.getElementById('searchForm').addEventListener('submit', function(e){
-      e.preventDefault();
-      var query = document.getElementById('searchInput').value.toLowerCase();
-      var found = false;
-      markers.forEach(function(m){
-        if(m.placa === query){
-          map.setView(m.marker.getLatLng(), 15);
-          m.marker.openPopup();
-          found = true;
-        }
-      });
-      if(!found){
-        alert('Veículo não encontrado.');
-      }
-    });
-  </script>
+<h1>📡 Rastreabilidade de Frota</h1>
 </body>
 </html>
