--- a/Rastreabilidade.html
+++ b/Rastreabilidade.html
@@ -6,24 +6,21 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
   <style>
+    html, body { height: 100%; margin: 0; }
     body {
-      margin: 0;
-      padding: 0;
       font-family: Arial, sans-serif;
-      height: 100vh;
       display: flex;
       flex-direction: column;
+      height: 100vh;
     }
-
     header {
       background: #222;
-      color: white;
+      color: #fff;
       padding: 15px;
       text-align: center;
       font-size: 20px;
       font-weight: bold;
     }
-
     #map {
       flex: 1;
       width: 100%;
@@ -36,36 +33,30 @@
 
   <script>
     function initMap() {
-      // Localização inicial - Praça das Bandeiras (exemplo)
       const posicaoCentral = { lat: -23.563210, lng: -46.654250 };
 
-      // Cria o mapa centralizado
       const mapa = new google.maps.Map(document.getElementById("map"), {
         zoom: 13,
         center: posicaoCentral,
       });
 
-      // Frota simulada (exemplo de veículos)
       const frota = [
         { lat: -23.563210, lng: -46.654250, titulo: "Ônibus 101 - Linha Centro" },
-        { lat: -23.570500, lng: -46.657800, titulo: "Ônibus 202 - Linha Zona Sul" },
-        { lat: -23.559000, lng: -46.650000, titulo: "Ônibus 303 - Linha Zona Norte" }
+        { lat: -23.570500, lng: -46.657800, titulo: "Ônibus 202 - Zona Sul" },
+        { lat: -23.559000, lng: -46.650000, titulo: "Ônibus 303 - Zona Norte" }
       ];
 
-      // Adiciona os marcadores no mapa
-      frota.forEach(veiculo => {
+      frota.forEach(v => {
         new google.maps.Marker({
-          position: { lat: veiculo.lat, lng: veiculo.lng },
+          position: { lat: v.lat, lng: v.lng },
           map: mapa,
-          title: veiculo.titulo
+          title: v.titulo
         });
       });
     }
   </script>
 
-  <!-- API do Google Maps (substitua YOUR_API_KEY pela sua chave de API) -->
-  <script async 
-    src="https://maps.googleapis.com/maps/api/js?key=YOUR_API_KEY&callback=initMap">
-  </script>
+  <!-- Troque YOUR_API_KEY pela sua chave da API -->
+  <script async defer src="https://maps.googleapis.com/maps/api/js?key=YOUR_API_KEY&callback=initMap"></script>
 </body>
 </html>
