--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
     body {
       font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
-      background: url("Terminal_de_onibus_Pca.das_Bandeiras_01.jpg") no-repeat center center fixed;
+      background: url("terminal_de_onibus.jpg") no-repeat center center fixed;
       background-size: cover;
       min-height: 100vh;
       display: flex;
