--- a/rastreabilidade.html
+++ b/rastreabilidade.html
@@ -2,7 +2,7 @@
 <html lang="pt-BR">
 <head>
   <meta charset="UTF-8">
-  <title>rastreabilidade de Frota</title>
+  <title>Rastreabilidade de Frota</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
   <style>
@@ -28,7 +28,7 @@
   </style>
 </head>
 <body>
-  <header>📡 rastreabilidade de Frota</header>
+  <header>📡 Rastreabilidade de Frota</header>
   <div id="map"></div>
 
   <script>
@@ -56,8 +56,7 @@
     }
   </script>
 
-  <!-- Troque YOUR_API_KEY pela sua chave da API -->
+  <!-- Troque YOUR_API_KEY pela sua chave -->
   <script async defer src="https://maps.googleapis.com/maps/api/js?key=YOUR_API_KEY&callback=initMap"></script>
 </body>
 </html>
-
