--- a/index.html
+++ b/index.html
@@ -16,39 +16,39 @@
       display: flex;
       justify-content: center;
       align-items: center;
-      position: relative;
-    }
-
-    .overlay { 
-      position: absolute; top:0; left:0; width:100%; height:100%; 
-      background-color: rgba(255,255,255,0.6); 
-      z-index:1;
+      padding: 20px;
     }
 
     .container {
-      position: relative; z-index:2;
-      padding: 30px 40px;
-      background: rgba(255,255,255,0.95);
-      border-radius: 16px;
+      padding: 35px 30px;
+      background: rgba(255,255,255,0.88);
+      border-radius: 20px;
       text-align: center;
-      max-width: 350px;
-      width: 90%;
-      box-shadow: 0 8px 20px rgba(0,0,0,0.2);
+      max-width: 400px;
+      width: 100%;
+      box-shadow: 0 12px 25px rgba(0,0,0,0.3);
       display: flex;
       flex-direction: column;
       align-items: center;
-      gap: 20px;
+      gap: 25px;
+      transition: transform 0.3s, box-shadow 0.3s;
+    }
+
+    .container:hover {
+      transform: translateY(-5px);
+      box-shadow: 0 18px 30px rgba(0,0,0,0.35);
     }
 
     h1 { 
       color: #222; 
-      font-size: 24px; 
+      font-size: 24px;
+      font-weight: 700;
     }
 
     .menu {
       display: flex;
       flex-direction: column;
-      gap: 12px;
+      gap: 15px;
       width: 100%;
       align-items: center;
     }
@@ -56,26 +56,57 @@
     .menu a {
       display: block;
       width: 100%;
-      max-width: 250px;
       text-decoration: none;
-      background: #007BFF;
+      background: linear-gradient(135deg, #1e90ff, #007BFF);
       color: white;
       padding: 14px;
-      border-radius: 10px;
+      border-radius: 12px;
       font-size: 16px;
       font-weight: bold;
-      transition: background 0.3s, transform 0.2s;
       text-align: center;
+      transition: all 0.3s ease;
+      box-shadow: 0 4px 10px rgba(0,0,0,0.2);
     }
 
     .menu a:hover {
-      background: #0056b3;
+      background: linear-gradient(135deg, #0056b3, #003f7f);
       transform: translateY(-3px);
+      box-shadow: 0 6px 15px rgba(0,0,0,0.25);
+    }
+
+    /* Responsividade */
+    @media (max-width: 768px) {
+      .container {
+        padding: 30px 20px;
+      }
+
+      h1 {
+        font-size: 22px;
+      }
+
+      .menu a {
+        font-size: 15px;
+        padding: 12px;
+      }
+    }
+
+    @media (max-width: 480px) {
+      .container {
+        padding: 25px 15px;
+      }
+
+      h1 {
+        font-size: 20px;
+      }
+
+      .menu a {
+        font-size: 14px;
+        padding: 10px;
+      }
     }
   </style>
 </head>
 <body>
-  <div class="overlay"></div>
 
   <div class="container">
     <h1>🚍 Sistema de Rastreabilidade de Frota</h1>
@@ -87,5 +118,6 @@
       <a href="rastreabilidade.html">📡 Rastreabilidade de Frota</a>
     </div>
   </div>
+
 </body>
 </html>
