--- a/index.html
+++ b/index.html
@@ -10,39 +10,34 @@
 
     body {
       font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
-      background: url("terminal_de_onibus.jpg") no-repeat center center fixed;
+      background: url("Terminal_de_onibus_Pca.das_Bandeiras_01.jpg") no-repeat center center fixed;
       background-size: cover;
       min-height: 100vh;
       display: flex;
       justify-content: center;
       align-items: center;
       padding: 20px;
+      color: #fff; /* texto branco sobre a imagem */
     }
 
     .container {
       padding: 35px 30px;
-      background: rgba(255,255,255,0.88);
+      /* fundo transparente, sem camada branca */
       border-radius: 20px;
       text-align: center;
       max-width: 400px;
       width: 100%;
-      box-shadow: 0 12px 25px rgba(0,0,0,0.3);
+      box-shadow: 0 12px 25px rgba(0,0,0,0.5); /* sombra para destacar o menu */
       display: flex;
       flex-direction: column;
       align-items: center;
       gap: 25px;
-      transition: transform 0.3s, box-shadow 0.3s;
-    }
-
-    .container:hover {
-      transform: translateY(-5px);
-      box-shadow: 0 18px 30px rgba(0,0,0,0.35);
     }
 
     h1 { 
-      color: #222; 
-      font-size: 24px;
+      font-size: 26px;
       font-weight: 700;
+      text-shadow: 2px 2px 5px rgba(0,0,0,0.7); /* sombra para legibilidade */
     }
 
     .menu {
@@ -56,53 +51,36 @@
     .menu a {
       display: block;
       width: 100%;
+      max-width: 280px;
       text-decoration: none;
-      background: linear-gradient(135deg, #1e90ff, #007BFF);
-      color: white;
+      background: rgba(0, 123, 255, 0.7); /* azul semi-transparente */
+      color: #fff;
       padding: 14px;
       border-radius: 12px;
       font-size: 16px;
       font-weight: bold;
       text-align: center;
       transition: all 0.3s ease;
-      box-shadow: 0 4px 10px rgba(0,0,0,0.2);
+      box-shadow: 0 4px 10px rgba(0,0,0,0.3);
     }
 
     .menu a:hover {
-      background: linear-gradient(135deg, #0056b3, #003f7f);
+      background: rgba(0, 86, 179, 0.8);
       transform: translateY(-3px);
-      box-shadow: 0 6px 15px rgba(0,0,0,0.25);
+      box-shadow: 0 6px 15px rgba(0,0,0,0.4);
     }
 
     /* Responsividade */
     @media (max-width: 768px) {
-      .container {
-        padding: 30px 20px;
-      }
-
-      h1 {
-        font-size: 22px;
-      }
-
-      .menu a {
-        font-size: 15px;
-        padding: 12px;
-      }
+      .container { padding: 30px 20px; }
+      h1 { font-size: 22px; }
+      .menu a { font-size: 15px; padding: 12px; }
     }
 
     @media (max-width: 480px) {
-      .container {
-        padding: 25px 15px;
-      }
-
-      h1 {
-        font-size: 20px;
-      }
-
-      .menu a {
-        font-size: 14px;
-        padding: 10px;
-      }
+      .container { padding: 25px 15px; }
+      h1 { font-size: 20px; }
+      .menu a { font-size: 14px; padding: 10px; }
     }
   </style>
 </head>
